# python-workers-issues

./: ANALYSIS.md  LESSONS_LEARNED.md  README.md  pyproject.toml
.github/workflows/: ci.yml
1-r2-binary/: README.md  pyproject.toml  wrangler.jsonc
1-r2-binary/src/: entry.py
2-fastapi-r2-streaming/: README.md  pyproject.toml  wrangler.jsonc
2-fastapi-r2-streaming/src/: worker.py
3-httpx-headers/: README.md  pyproject.toml  wrangler.jsonc
3-httpx-headers/src/: entry.py
4-r2-large-binary-roundtrip/: README.md  pyproject.toml  wrangler.jsonc
4-r2-large-binary-roundtrip/src/: entry.py
5-sync-http-libraries/: README.md  pyproject.toml  wrangler.jsonc
5-sync-http-libraries/src/: entry.py
tests/: conftest.py  test_examples.py
