[project]
name = "python-workers-issues"
version = "0.1.0"
description = "Self-contained reproductions of Python Workers bugs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "ruff>=0.12.10",
]
