[project]
name = "fastapi-r2-streaming"
version = "0.1.0"
description = "FastAPI + R2 streaming example — demonstrates StreamingResponse truncation bug"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    "fastapi",
    "workers-runtime-sdk>=1.1.1",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]
