[project]
name = "python-httpx-headers"
version = "0.1.0"
description = "Python Workers bug: httpx silently drops outbound HTTP request headers in Pyodide/workerd"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "webtypy>=0.1.7",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]
