[project]
name = "r2-large-binary-roundtrip"
version = "0.1.0"
description = "Reproduction: large R2 binary round-trip through Python crashes Worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
    "fastapi",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]
